introduce function illustration

--- a/python-school/1-functions/sol-1-defining-functions.ipynb
+++ b/python-school/1-functions/sol-1-defining-functions.ipynb
@@ -412,6 +412,8 @@
    "id": "0d1f57b2",
    "metadata": {},
    "source": [
+    "Here's a visual summary of what we discussed until now:\n",
+    "\n",
     "![](img/function.png)"
    ]
   },
