--- a/python-school/4-numpy/sol-1-numpy-basics.ipynb
+++ b/python-school/4-numpy/sol-1-numpy-basics.ipynb
@@ -820,7 +820,7 @@
     }
    ],
    "source": [
-    "# Instead of creation an a(rray)range, simply create a list from a range!\n",
+    "# Instead of creating an a(rray)range, simply create a list from a range!\n",
     "list(range(2, 9, 2))"
    ]
   },
