--- a/python-school/6-dataframes/sol-2-dataframes-advanced.ipynb
+++ b/python-school/6-dataframes/sol-2-dataframes-advanced.ipynb
@@ -1689,7 +1689,7 @@
    "metadata": {},
    "source": [
     "```{admonition} Question\n",
-    "Having seen that, can you guess what the problem was? How is this file different from the ones we've seen previously?\n",
+    "Having seen that, can you guess what the problem was? How is this file different from the ones we've seen previously? Looking at the documentation for [`pl.read_csv()`](https://docs.pola.rs/api/python/stable/reference/api/polars.read_csv.html), can you find an argument that could help us read this file properly?\n",
     "```"
    ]
   },
@@ -1710,10 +1710,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b6887857",
+   "metadata": {},
+   "source": [
+    "Here is our table:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d4589ff8",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
