--- a/python-school/1-functions/1-defining-functions.ipynb
+++ b/python-school/1-functions/1-defining-functions.ipynb
@@ -54,7 +54,8 @@
    "metadata": {},
    "source": [
     "A function in Python is an object, meaning it's a variable like any other.\n",
-    "The main way it differs from the other types of variables you've seen until now is in the way it is assigned, or defined.\n",
+    "The first main way it differs from the other types of variables you've seen until now is that it doesn't hold _data_ (numbers, strings, ensembles of these...) but _code_.\n",
+    "The second is in the way it is assigned, or defined.\n",
     "For instance, let's imagine you want to assign a function to a variable named `fun`.\n",
     "In that case, you wouldn't simply start writing `fun = ...`, like a normal variable assignment, but use the reserved keyword `def`, like so:"
    ]
@@ -405,6 +406,16 @@
     "\n",
     "result_sum = fun(1, 2)\n",
     "print(result_sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d1f57b2",
+   "metadata": {},
+   "source": [
+    "Here's a visual summary of what we discussed until now:\n",
+    "\n",
+    "![](img/function.png)"
    ]
   },
   {
