--- a/python-school/6-dataframes/1-dataframes-basics.ipynb
+++ b/python-school/6-dataframes/1-dataframes-basics.ipynb
@@ -181,7 +181,7 @@
     "\n",
     "\n",
     "In most cases, you actually want to deal with an existing dataset, that you'd like to analyse.\n",
-    "For this course, let's try analyzing data recording protests from around the globe, [collected as part of the Mass Mobilization project](https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/HTTWYL). No need to download anything, the data are already in the repository in the form of a CSV file. So let's read our data, using `pl.read_csv`:"
+    "For this course, let's try analyzing [countries_pop.csv](data/countries_pop.csv), which are data recording protests from around the globe, [collected as part of the Mass Mobilization project](https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/HTTWYL). No need to download anything, the data are already in the repository in the form of a CSV file. So let's read our data, using `pl.read_csv`:"
    ]
   },
   {
@@ -1077,7 +1077,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37608c3a",
+   "id": "121db2c2",
+   "metadata": {},
+   "source": [
+    "```{admonition} Question\n",
+    "What do you think happens if you don't `alias` or don't set the new column with `new_col=...`?\n",
+    "Try it on the cell above.\n",
+    "```\n",
+    "\n",
+    "```{admonition} Answer\n",
+    ":class: tip dropdown\n",
+    "\n",
+    "You perform operations on the input column and keep the same name for the output one, so the input column is overwritten.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77f5589a",
    "metadata": {},
    "source": [
     "![](img/df_with_columns.png)"
