--- a/python-school/6-dataframes/2-dataframes-advanced.ipynb
+++ b/python-school/6-dataframes/2-dataframes-advanced.ipynb
@@ -1469,15 +1469,27 @@
    "metadata": {},
    "source": [
     "```{admonition} Question\n",
-    "Having seen that, can you guess what the problem was? How is this file different from the ones we've seen previously?\n",
+    "Having seen that, can you guess what the problem was? How is this file different from the ones we've seen previously? Looking at the documentation for [`pl.read_csv()`](https://docs.pola.rs/api/python/stable/reference/api/polars.read_csv.html), can you find an argument that could help us read this file properly?\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6887857",
+   "metadata": {},
+   "source": [
+    "Here is our table:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d4589ff8",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
