--- a/python-school/2-mixed-structures/sol-1-nested-structures.ipynb
+++ b/python-school/2-mixed-structures/sol-1-nested-structures.ipynb
@@ -357,7 +357,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Quesstion\n",
+    "```{admonition} Question\n",
     "You might be tempted to  implement something like this - but it wouldn't work. Why?\n",
     "```"
    ]
