--- a/python-school/5-visualization/sol-1-viz-basics.ipynb
+++ b/python-school/5-visualization/sol-1-viz-basics.ipynb
@@ -180,6 +180,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```{tip}\n",
+    "To make things clearer for you, try to always stick to the following notation:\n",
+    "- `fig` for the `Figure`,\n",
+    "- `ax` for the `Axes`.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### A note on coding style\n",
     "\n",
     "This guide will only present the explicit (or \"object-oriented\") way to create Figures and Axes. Why? First, because this will allow you to properly understand what we do here, like where we're actually drawing stuff. Second, this will enable you to make more complex plots in the future, which is sometimes simply not possible when you go down the implicit way."
