--- a/python-school/1-functions/sol-1-defining-functions.ipynb
+++ b/python-school/1-functions/sol-1-defining-functions.ipynb
@@ -511,8 +511,10 @@
    "id": "8c94c400",
    "metadata": {},
    "source": [
+    "```{admonition} Question\n",
     "This is a clear example of unnecessary code duplication: you can see the two pieces of code are identical, only the input changed!\n",
-    "Write a function `print_elements` to remedy that."
+    "Try to write a function `print_elements` to remedy that.\n",
+    "```"
    ]
   },
   {
