adjust difficulty rating and properlly hide an answer

--- a/python-school/4-numpy/sol-2-numpy-exercises.ipynb
+++ b/python-school/4-numpy/sol-2-numpy-exercises.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "## Exercise - frameslices\n",
     "\n",
-    "✪✪✪ RETURN a NEW Numpy matrix of `n` rows and `n` columns, in which all the values are zero except those on borders, which must be equal to a given `k`.\n",
+    "✪ RETURN a NEW Numpy matrix of `n` rows and `n` columns, in which all the values are zero except those on borders, which must be equal to a given `k`.\n",
     "\n",
     "**DO NOT** use `for` nor `while` loops, use slices!"
    ]
@@ -99,7 +99,7 @@
    "source": [
     "## Exercise - framefill\n",
     "\n",
-    "✪✪✪ Solve the precious exercise, this using `np.full` function and with **only one slice**\n",
+    "✪✪ Solve the precious exercise, this using `np.full` function and with **only one slice**\n",
     "\n",
     "- **DO NOT** use `for` nor `while` loops\n"
    ]
@@ -156,7 +156,7 @@
    "source": [
     "## Exercise - avg_rows\n",
     "\n",
-    "✪✪✪ Takes a numpy matrix n x m and RETURN a NEW numpy matrix consisting in a single column in which the values are the average of the values in corresponding rows of input matrix\n",
+    "✪ Takes a numpy matrix n x m and RETURN a NEW numpy matrix consisting in a single column in which the values are the average of the values in corresponding rows of input matrix\n",
     "\n",
     "Example:\n",
     "\n",
@@ -262,7 +262,7 @@
    "source": [
     "## Exercise - matrot\n",
     "\n",
-    "✪✪✪ RETURN a NEW Numpy matrix which has the numbers of input matrix rotated by a column.\n",
+    "✪✪ RETURN a NEW Numpy matrix which has the numbers of input matrix rotated by a column.\n",
     "\n",
     "With rotation we mean that:\n",
     "\n",
@@ -1494,7 +1494,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "39fd832d",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "answer",
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "def stairsteps(mat):\n",
