--- a/python-school/1-functions/sol-1-defining-functions.ipynb
+++ b/python-school/1-functions/sol-1-defining-functions.ipynb
@@ -2828,7 +2828,7 @@
    "source": [
     "### Exercise - record\n",
     "\n",
-    "Write a function `record` which, given two lists `songsA` and `songsB`, MODIFIES `songsA` overwriting it with the content of `songsB`. If `songsB` has less elements than `songsS`, fill the remaining spaces with `None`\n",
+    "Write a function `record` which, given two lists `songsA` and `songsB`, MODIFIES `songsA` overwriting it with the content of `songsB`. If `songsB` has less elements than `songsA`, fill the remaining spaces with `None`\n",
     "\n",
     "- **ASSUME** `songsB` has at most the same number of songs of `songsA`\n",
     "- **DO NOT** reassign `album` (so no `album =`)"
