--- a/python-school/1-functions/1-defining-functions.ipynb
+++ b/python-school/1-functions/1-defining-functions.ipynb
@@ -511,8 +511,10 @@
    "id": "8c94c400",
    "metadata": {},
    "source": [
+    "```{admonition} Question\n",
     "This is a clear example of unnecessary code duplication: you can see the two pieces of code are identical, only the input changed!\n",
-    "Write a function `print_elements` to remedy that."
+    "Try to write a function `print_elements` to remedy that.\n",
+    "```"
    ]
   },
   {
@@ -2503,7 +2505,7 @@
    "source": [
     "### Exercise - record\n",
     "\n",
-    "Write a function `record` which, given two lists `songsA` and `songsB`, MODIFIES `songsA` overwriting it with the content of `songsB`. If `songsB` has less elements than `songsS`, fill the remaining spaces with `None`\n",
+    "Write a function `record` which, given two lists `songsA` and `songsB`, MODIFIES `songsA` overwriting it with the content of `songsB`. If `songsB` has less elements than `songsA`, fill the remaining spaces with `None`\n",
     "\n",
     "- **ASSUME** `songsB` has at most the same number of songs of `songsA`\n",
     "- **DO NOT** reassign `album` (so no `album =`)"
