--- a/python-school/2-mixed-structures/1-nested-structures.ipynb
+++ b/python-school/2-mixed-structures/1-nested-structures.ipynb
@@ -343,7 +343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Quesstion\n",
+    "```{admonition} Question\n",
     "You might be tempted to  implement something like this - but it wouldn't work. Why?\n",
     "```"
    ]
@@ -505,7 +505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "✪ **EXERCISE**: Now implement the `extrowr` iterating over a range of row indices:\n",
+    "✪ **EXERCISE**: Now implement the `extrowr` iterating over a range of column indices:\n",
     "\n",
     "* **NOTE 1**: To create a new list use a `for` loop\n",
     "* **NOTE 2**: remember to use a new name for the column index!"
@@ -948,7 +948,7 @@
     "\n",
     "✪✪ Implement the function `fillc` which takes as input `mat` (a list of lists with dimension `nrows` x `ncol`) and MODIFIES it by placing the character `c` inside all the matrix cells.\n",
     "\n",
-    "* to visit the matrix use for in range cycles\n",
+    "* to visit the matrix use two `for ... in range` cycles\n",
     "\n",
     "Ingredients:\n",
     "\n",
