--- a/python-school/2-mixed-structures/3-chal.ipynb
+++ b/python-school/2-mixed-structures/3-chal.ipynb
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0e5a94aa-stripped",
    "metadata": {
     "tags": [
@@ -623,8 +623,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "pygments_lexer": "ipython3"
   },
   "toc": {
    "base_numbering": 1,
