--- a/python-school/3-data-files/4-chal.ipynb
+++ b/python-school/3-data-files/4-chal.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "db53fcb9",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "efba6b6b-stripped",
    "metadata": {},
    "outputs": [],
@@ -437,7 +437,6 @@
    "execution_count": null,
    "id": "5f00106b-stripped",
    "metadata": {
-    "scrolled": false,
     "tags": [
      "skip-execution"
     ]
@@ -633,9 +632,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "nasty-sampling-stripped",
-   "metadata": {
-    "nbsphinx": "hidden"
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -655,8 +652,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "pygments_lexer": "ipython3"
   },
   "toc": {
    "base_numbering": 1,
