--- a/python-school/4-numpy/2-numpy-exercises.ipynb
+++ b/python-school/4-numpy/2-numpy-exercises.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "## Exercise - frameslices\n",
     "\n",
-    "✪✪✪ RETURN a NEW Numpy matrix of `n` rows and `n` columns, in which all the values are zero except those on borders, which must be equal to a given `k`.\n",
+    "✪ RETURN a NEW Numpy matrix of `n` rows and `n` columns, in which all the values are zero except those on borders, which must be equal to a given `k`.\n",
     "\n",
     "**DO NOT** use `for` nor `while` loops, use slices!"
    ]
@@ -76,7 +76,7 @@
    "source": [
     "## Exercise - framefill\n",
     "\n",
-    "✪✪✪ Solve the precious exercise, this using `np.full` function and with **only one slice**\n",
+    "✪✪ Solve the precious exercise, this using `np.full` function and with **only one slice**\n",
     "\n",
     "- **DO NOT** use `for` nor `while` loops\n"
    ]
@@ -115,7 +115,7 @@
    "source": [
     "## Exercise - avg_rows\n",
     "\n",
-    "✪✪✪ Takes a numpy matrix n x m and RETURN a NEW numpy matrix consisting in a single column in which the values are the average of the values in corresponding rows of input matrix\n",
+    "✪ Takes a numpy matrix n x m and RETURN a NEW numpy matrix consisting in a single column in which the values are the average of the values in corresponding rows of input matrix\n",
     "\n",
     "Example:\n",
     "\n",
@@ -190,7 +190,7 @@
    "source": [
     "## Exercise - matrot\n",
     "\n",
-    "✪✪✪ RETURN a NEW Numpy matrix which has the numbers of input matrix rotated by a column.\n",
+    "✪✪ RETURN a NEW Numpy matrix which has the numbers of input matrix rotated by a column.\n",
     "\n",
     "With rotation we mean that:\n",
     "\n",
@@ -1039,40 +1039,6 @@
     "- if the matrix is not square, raises `ValueError`\n",
     "- **DO NOT** use python lists!\n",
     "- **HINT**: how many elements must the array to return have?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39fd832d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def stairsteps(mat):\n",
-    "    n, m = mat.shape\n",
-    "    if n != m:\n",
-    "        raise ValueError(\"Required a square matrix, found instead: %s x %s\" % (n, m))\n",
-    "\n",
-    "    res = np.zeros(n + n - 1)\n",
-    "\n",
-    "    for i in range(n):\n",
-    "        res[2 * i] = mat[i, i]\n",
-    "\n",
-    "    for i in range(n - 1):\n",
-    "        res[2 * i + 1] = mat[i, i + 1]\n",
-    "\n",
-    "    return res\n",
-    "\n",
-    "def stairsteps_pro(mat):\n",
-    "    n, m = mat.shape\n",
-    "    if n != m:\n",
-    "        raise ValueError(\"Richiesta una n x n, trovata invece una %s x %s\" % (n, m))\n",
-    "    a = np.diag(mat)\n",
-    "    b = np.diag(mat, 1)\n",
-    "    ret = np.zeros((1, a.shape[0] + b.shape[0]))\n",
-    "    ret[:, ::2] = a\n",
-    "    ret[:, 1::2] = b\n",
-    "    return ret"
    ]
   },
   {
